--- a/gallery-ar.html
+++ b/gallery-ar.html
@@ -669,8 +669,76 @@
                                     <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
                                 </div>
 
-                                <div class="col-md-12">
-                                    <h3 class="text-center margin-bottom-10 margin-top-20">أشغال متفرّقة</h3>
+                                <div class="col-md-6">
+                                    <h3 class="text-center margin-bottom-10">صوبات حطب</h3>
+                                    <div class="wprt-lines style-2 custom-1">
+                                        <div class="line-1"></div>
+                                        <div class="line-2"></div>
+                                    </div>
+                                    <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
+
+                                    <div class="wprt-galleries galleries w-570px " data-width="135" data-margin="10">
+                                        <div id="wprt-slider" class="flexslider">
+                                            <ul class="slides">
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/Stone/fireplace/IMG_2105.JPG"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/fireplace/IMG_2105.JPG" alt="image" />
+                                                </li>
+
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/Stone/fireplace/IMG_2117.JPG"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/fireplace/IMG_2117.JPG" alt="image" />
+                                                </li>
+
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/Stone/fireplace/IMG_2118.JPG"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/fireplace/IMG_2118.JPG" alt="image" />
+                                                </li>
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/Stone/fireplace/IMG_2119.JPG"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/fireplace/IMG_2119.JPG" alt="image" />
+                                                </li>
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/Stone/fireplace/IMG_2120.JPG"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/fireplace/IMG_2120.JPG" alt="image" />
+                                                </li>
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/Stone/fireplace/IMG_2122.JPG"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/fireplace/IMG_2122.JPG" alt="image" />
+                                                </li>
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/Stone/fireplace/IMG_2124.JPG"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/fireplace/IMG_2124.JPG" alt="image" />
+                                                </li>
+                                                <li class="flex-active-slide">
+                                                    <a class="zoom" href="assets/img/Stone/fireplace/IMG_2125.JPG"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/Stone/fireplace/IMG_2125.JPG" alt="image" />
+                                                </li>
+
+                                            </ul>
+                                        </div>
+
+                                        <div id="wprt-carousel" class="flexslider">
+                                            <ul class="slides">
+                                                <li><img src="assets/img/Stone/fireplace/IMG_2105.JPG" alt="image"></li>
+                                                <li><img src="assets/img/Stone/fireplace/IMG_2117.JPG" alt="image"></li>
+                                                <li><img src="assets/img/Stone/fireplace/IMG_2118.JPG" alt="image"></li>
+                                                <li><img src="assets/img/Stone/fireplace/IMG_2119.JPG" alt="image"></li>
+                                                <li><img src="assets/img/Stone/fireplace/IMG_2120.JPG" alt="image"></li>
+                                                <li><img src="assets/img/Stone/fireplace/IMG_2122.JPG" alt="image"></li>
+                                                <li><img src="assets/img/Stone/fireplace/IMG_2124.JPG" alt="image"></li>
+                                                <li><img src="assets/img/Stone/fireplace/IMG_2125.JPG" alt="image"></li>
+                                                
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
+
+                                </div><!-- /.col-md-6 -->
+
+                                <div class="col-md-6">
+                                    <h3 class="text-center margin-bottom-10">أشغال متفرّقة</h3>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
                                         <div class="line-2"></div>
