--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <div id="rev-slider1" class="rev_slider fullwidthabanner">
         <ul>
             <!-- Slide -->
-            <li data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-thumb="assets/img/slider/DJI_0028.JPG" data-rotate="0" data-saveperformance="off" data-title="STONE">
+            <li data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-thumb="assets/img/slider/IMG_2098.JPG" data-rotate="0" data-saveperformance="off" data-title="STONE">
                 <!-- Main Image -->
-                <img src="assets/img/slider/DJI_0028.JPG" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-no-retina>
+                <img src="assets/img/slider/IMG_2098.JPG" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-no-retina>
                 <!-- Layers -->
                 <div class="tp-caption tp-resizeme text-white font-family-heading text-shadow font-weight-500"
                     data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -132,9 +132,9 @@
             <!-- End Slide -->
 
             <!-- Slide -->
-            <li data-transition="boxfade" data-slotamount="7" data-easein="Expo.easeOut" data-easeout="Expo.easeOut" data-masterspeed="2000" data-thumb="assets/img/slider/2.jpg" data-rotate="0" data-saveperformance="off" data-title="MARBLE">
+            <li data-transition="boxfade" data-slotamount="7" data-easein="Expo.easeOut" data-easeout="Expo.easeOut" data-masterspeed="2000" data-thumb="assets/img/slider/IMG_2099.JPG" data-rotate="0" data-saveperformance="off" data-title="MARBLE">
                 <!-- Main Image -->
-                <img src="assets/img/slider/2.jpg" alt="" data-bgposition="center center" data-no-retina>
+                <img src="assets/img/slider/IMG_2099.JPG" alt="" data-bgposition="center center" data-no-retina>
                 <!-- Layers -->
                 <div class="tp-caption tp-resizeme text-white font-family-heading text-shadow font-weight-500"
                     data-x="['left','left','left','left']" data-hoffset="['50','30','30','30']"
@@ -519,113 +519,6 @@
                         </div><!--/.wprt-project -->
                     </section>
 
-                    <!-- TEAM -->
-                    <section id="team" class="wprt-section">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-                                    <h2 class="text-center margin-bottom-20">OUR TEAM</h2>
-                                    <div class="wprt-lines style-2 custom-1">
-                                        <div class="line-1"></div>
-                                    </div>
-
-                                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
-
-                                    <p class="wprt-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet iaculis elit. Nam semper ut arcu non placerat. Praesent nibh massa varius.</p>
-
-                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
-
-                                    <div class="wprt-team has-bullets bullet-style-1" data-layout="slider" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="30" data-gapv="30">
-                                            <div class="cbp-item">
-                                                <div class="member">
-                                                    <div class="inner">
-                                                        <div class="image">
-                                                            <div class="inner">
-                                                                <img src="assets/img/team/3.jpg" alt="image" />
-                                                            </div>
-                                                             <ul class="socials clearfix">
-                                                                <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
-                                                             </ul>
-                                                        </div>
-                                                        <div class="texts">
-                                                            <h4 class="name">Mana'a Abu Snaineh</h4>
-                                                            <div class="position">CEO</div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                          
-                                            <div class="cbp-item">
-                                                <div class="member">
-                                                    <div class="inner">
-                                                        <div class="image">
-                                                            <div class="inner">
-                                                                <img src="assets/img/team/3.jpg" alt="image" />
-                                                            </div>
-                                                             <ul class="socials clearfix">
-                                                                <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
-                                                                <li class="twitter"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-                                                                <li class="google-plus"><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
-                                                             </ul>
-                                                        </div>
-                                                        <div class="texts">
-                                                            <h4 class="name">Sarah Spence</h4>
-                                                            <div class="position">Construction Assistant</div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="cbp-item">
-                                                <div class="member">
-                                                    <div class="inner">
-                                                        <div class="image">
-                                                            <div class="inner">
-                                                                <img src="assets/img/team/4.jpg" alt="image" />
-                                                            </div>
-                                                             <ul class="socials clearfix">
-                                                                <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
-                                                                <li class="twitter"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-                                                                <li class="google-plus"><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
-                                                             </ul>
-                                                        </div>
-                                                        <div class="texts">
-                                                            <h4 class="name">John Halpern</h4>
-                                                            <div class="position">Construction Manager</div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="cbp-item">
-                                                <div class="member">
-                                                    <div class="inner">
-                                                        <div class="image">
-                                                            <div class="inner">
-                                                                <img src="assets/img/team/1.jpg" alt="image" />
-                                                            </div>
-                                                             <ul class="socials clearfix">
-                                                                <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
-                                                                <li class="google-plus"><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
-                                                                <li class="linkedin"><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                             </ul>
-                                                        </div>
-                                                        <div class="texts">
-                                                            <h4 class="name">Tommy Atkins</h4>
-                                                            <div class="position">Electricians</div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div><!-- /#team-wrap -->
-                                    </div><!-- /.wprt-team -->
-
-                                    <div class="wprt-spacer" data-desktop="70" data-mobi="50" data-smobi="40"></div>
-                                </div><!-- /.col-md-12 -->
-                           </div><!-- /.row -->
-                        </div><!-- /.container -->
-                    </section>
-
-                    <!-- PARTNERS -->
                     
                 </div><!-- /.page-content -->
             </div>
